# Udemy-Clone-React

./: README.md  asset-manifest.json  index.html  package-lock.json  package.json
Server/: newdb.json
Server/backend/: db.json  db.sqlite3  newdb.json  sample_file.json
Server/backend/backend/: db.json  settings.py  urls.py  views.py
Server/backend/courses/: forms.py  models.py  urls.py  views.py
Server/backend/poetry-task/: manage.py  pyproject.toml
Server/backend/poetry-task/poetry_and_files/: asgi.py  settings.py  urls.py  wsgi.py
Server/backend/users/: forms.py  models.py  urls.py  views.py
public/: index.html
src/: App.css  App.js  Courses-Section.js  index.js
src/Components/: CourseCard.js  CourseDetails.js  Courses-Section.js  FetchCourses.js  GroupedCourses.js  Header.js  Home.js  NavigationBar.js  PopUpCourse.js  Rating_Stars.js  Test.html
src/Components/AddtoCart/: Add to Cart.js  AddtoCart.css
src/Components/CourseCard/: CourseCard.js  Price.js
src/Components/Course_Details/: CourseContent.js  CourseDetails.js  Course_Detail_Img.js  Course_Details.css  Course_Details_Header.js  Description.js  DropDownElement.js  DropDownVideo.js  DropDownVideos.js  DummyInstructor.js  DummyReviews.js  Instructor.css  Instructor.js  Requirements.js  Review.js  Reviews.js  ShowMore.js  WhatYoullLearn.js
src/Components/Header/: Header.css  Header.js
src/Data/: FetchCourses.js
src/Pages/: CourseDetails.js  Home.js
static/css/: main.0e4b8e51.css  main.0e4b8e51.css.map
static/js/: main.fde88b24.js  main.fde88b24.js.LICENSE.txt  main.fde88b24.js.map
(+20 files in other folders)
