[tool.poetry]
name = "poetry-task"
version = "0.1.0"
description = ""
authors = ["AhmedOsama198 <ahmed.osama1982002@gmail.comm>"]
readme = "README.md"
packages = [{include = "poetry_task"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
